# Yes-Man

./: .gitignore  CLAUDE.md  Makefile  debug_wake_word.py  pyproject.toml  requirements.txt  setup.py  simple_debug.py  simple_train_yes_man.py  simple_wake_word_test.py  test_model_only.py  test_wake_word.py  test_yesman_model.py  train_yes_man.py
.claude/: settings.local.json
.claude/commands/: plan.md  pre-plan.md  pre-specify.md  specify.md  tasks.md
audio_layer/: __init__.py  agent_executor.py  audio_buffer.py  continuous_recognition.py  conversation_manager.py  error_handler.py  ipc_server.py  langflow_client.py  main.py  microphone_input.py  openwakeword_detector.py  orchestrator.py  performance_monitor.py  tool_manager.py  voicevox_integration.py  wake_word_detector.py  whisper_integration.py
audio_layer/database/: __init__.py  init_db.py
audio_layer/database/models/: __init__.py  agent_settings.py  audio_settings.py  conversation_exchange.py  conversation_session.py  tool_configuration.py
audio_layer/whisper/: __init__.py
face_ui/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
face_ui/public/: electron.js  index.html  preload.js
face_ui/src/: App.css  App.tsx  index.css  index.tsx
face_ui/src/components/: FaceAnimation.css  FaceAnimation.tsx  Settings.css  Settings.tsx
face_ui/src/services/: ipcBridge.ts
face_ui/src/store/: systemStore.ts
face_ui/src/types/: index.ts
langflow_flows/: basic_conversation.json  calculator_tool.json  timer_tool.json  yes_man_agent.json
memory/: constitution.md  constitution_update_checklist.md
scripts/: __init__.py  check.py  check_voicevox.py  common.sh  create-new-feature.sh  create_langflow.py  quality_check.py  start_langflow.py  start_voicevox.py  start_yes_man.ps1  test_system.ps1  update-agent-context.sh  yes-man.ps1
specs/001-yes-man-fallout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-yes-man-fallout/contracts/: audio_api.yaml  face_ui_ipc.yaml  langflow_integration_api.yaml
templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
tests/contract/: test_audio_api_continuous.py  test_audio_api_tts.py  test_audio_api_wake_word.py  test_face_ui_ipc_state.py  test_langflow_integration_agent.py  test_langflow_integration_tools.py
tests/integration/: test_basic_dialogue.py  test_calculator_task.py  test_gui_settings.py  test_timer_task.py
tests/performance/: test_performance_requirements.py
tests/privacy/: test_privacy_compliance.py
tests/scenarios/: test_quickstart_scenarios.py
tests/unit/: test_audio_buffer.py  test_ipc_server.py  test_voicevox_integration.py  test_whisper_integration.py
